tolk-tester/tests/invalid-syntax/err-3816.tolk
import "@unknown-folder/some-math.tolk";

/**
@compilation_should_fail
@stderr Failed to import: path mapping @unknown-folder was not registered
 */
